--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #171717;
+    background-color: #171717fa;
     color: whitesmoke;
     padding: 20px 10%;
 }
@@ -32,7 +32,23 @@ li, a {
     color: #edf0f1;
     text-decoration: none;
 }
-
+.content {
+    padding: 16px;
+}
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  .sticky + .content {
+    padding-top: 60px;
+  }
+.navbar{
+    overflow: hidden;
+    z-index: 50;
+   
+}
 nav ul{
     list-style: none;
 }
@@ -47,11 +63,11 @@ nav li{
 }
 
 .navlinks li a:hover{
-    color: rgb(0, 70, 128);
+    color: #c24040;
 }
 
 .landing{
-    height: calc(100vh - 81.6px);
+    height: calc(100vh - 100px);
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -125,7 +141,7 @@ nav li{
 }
 
 .about {
-    height: 100vh;
+    height: calc(100vh - 81.6px);
     margin-top: 100px;
 }
 
@@ -178,3 +194,128 @@ nav li{
 .main_left {
     font-size: 1.7rem;
 }
+
+.containers {
+    width: 100%;
+    background-color: gray;
+    height: 30px;
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-radius: 10px;
+}
+.skill {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 12px;
+    padding-right: 20px;
+    color: white;
+    height: 30px;
+    border: 0px solid rgba(0, 0, 0, 0);
+    border-radius: 10px;
+}
+.html {
+    width: 90%;
+    background-color: #c24040;
+}
+.css {
+    width: 80%;
+    background-color: #c24040;
+}
+.js {
+    width: 60%;
+    background-color: #c24040;
+}
+.wp {
+    width: 80%;
+    background-color: #c24040;
+}
+
+.skills {
+    height: calc(100vh - 81.6px);
+    margin-top: 100px;
+}
+.skills h1{
+    font-size: 10rem;
+    z-index: 0;
+    opacity: .2;
+}
+.skills p {
+    color: whitesmoke;
+    font-size: 0.9rem;
+}
+.my-skills{
+    max-width: 900px;
+    background-color: #212122;
+    box-shadow: 0 0 1.2rem rgba(0, 0, 0, .25);
+    padding: 50px;
+    position: relative;
+    top: -70px;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    border-radius: 10px;
+}
+
+/* Style inputs */
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+  }
+  input[type=submit] {
+    background-color: #c24040;
+    color: white;
+    padding: 12px 20px;
+    cursor: pointer;
+  }
+  input[type=submit]:hover {
+    background-color: #c24040;
+  }
+  .contactme {
+    max-width: 900px;
+    background-color: #212122;
+    box-shadow: 0 0 1.2rem rgba(0, 0, 0, .25);
+    padding: 50px;
+    position: relative;
+    top: -70px;
+    left: 50%;
+    right: 50%;
+    transform: translateX(-50%);
+    z-index: 1;
+    border-radius: 10px;
+  }
+.contact h1{
+    font-size: 10rem;
+    z-index: 0;
+    opacity: 0.1;
+}
+.contact label{
+    color: whitesmoke;
+}
+.contact input, textarea{
+    border: 0px solid #000;
+    border-radius: 10px;
+    background-color: #171717;
+    color: whitesmoke;
+}
+
+.contact img {
+    width: 300px;
+    position: relative;
+    top: -300px;
+    left: calc(100% - 100px);
+    right: calc(100% - 100px);
+    transform: translateX(calc(-100% + 50px));
+}
+.skills img {
+    width: 300px;
+    position: relative;
+    top: -300px;
+    left: calc(100% - 100px);
+    right: calc(100% - 100px);
+    transform: translateX(calc(-100% + 50px));
+}
+
